manifests/base/resources/edge-auth/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
    prometheus.io/scrape_high_cardinality: "true"
  labels:
    app: edge-auth
    chart: edge-auth-5.1.5
    heritage: Helm
    release: edge-auth
  name: edge-auth
  namespace: $(NAMESPACE)
spec:
  ports:
  - name: edge-auth
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: oidc
    nodePort: 32123
    port: 32123
    protocol: TCP
    targetPort: 32123
  selector:
    app: edge-auth
    release: edge-auth
  type: NodePort
---
