manifests/base/resources/edge-auth/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: edge-auth
    chart: edge-auth-5.1.5
    heritage: Helm
    release: edge-auth
  name: edge-auth
  namespace: $(NAMESPACE)
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: edge-auth
          servicePort: 8080
        path: /login
      - backend:
          serviceName: edge-auth
          servicePort: 8080
        path: /logout
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://edge-auth-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      set $host_and_uri $http_host$request_uri;
      if ( $host_and_uri ~* "^.{2049,}$" ) { return 414; }
      rewrite (?i)/api/(.*) /$1 break;
      more_clear_input_headers "X-Forwarded-Host" "X-Forwarded-For" "X-Forwarded-Proto" "X-Original-URI" "X-Original-URL";
    nginx.ingress.kubernetes.io/enable-cors: "true"
  labels:
    app: edge-auth
    chart: edge-auth-5.1.5
    heritage: Helm
    release: edge-auth
  name: edge-auth-api
  namespace: $(NAMESPACE)
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: edge-auth
          servicePort: 8080
        path: /api/v1/diagnose-claims
      - backend:
          serviceName: edge-auth
          servicePort: 8080
        path: /api/v1/csrf-token
---
